# aws-cloud-run

./: .gitignore  AWS_SSO_SETUP.md  README.md  main.py  pyproject.toml
examples/: hello.py
src/cloud_run/: __init__.py  aws_infra.py  cli.py  ecs_infra.py  ecs_runner.py  lambda_runner.py  packaging.py  python_runner.py  runner.py  shell_runner.py
tests/: conftest.py  test_cli.py  test_ecs_infra.py  test_ecs_utils.py  test_lambda_runner.py  test_packaging_and_infra.py  test_runner.py
