[project]
name = "pi-cloud-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.21",
    "cloudpickle>=3.0.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "moto[all]>=5.0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_run"]

[project.scripts]
cloud_run = "cloud_run.cli:main"

[tool.ruff]
line-length = 100
preview = true


[tool.ruff.lint]
select = [
    "I", # Enable all isort rules
    "F", # Enable all flake8 rules
    "UP", # Enable pyupgrade rules to modernize Python syntax
    "B006", # Don't allow mutable default arguments. i.e. def f(x={})
    "PLC0415", # import found outside of the top of the file
] 
ignore = [
    "F841", # F841 is unused variable.
]

